eZ publish changelog:
---------------------

Changes from 2.2.9 to 2.2.10
---------------------------
* Fixed bug. Now setting envelope information when sending mail with ezmail

Changes from 2.2.8 to 2.2.9
---------------------------
* Fixed security bug with variable check in eZ article.
* Fixed security bug with session variable.
* Fixed bug with permission when non logged in users had write access to the image catalogue.
* Fixed bug with section override templates in article view and article list.
* Fixed typo in section edit.
* Fixed cache bugs in headline view.
* Fixed bug with addresses.
* Improved MySQL 4 support in eZ trade.
* Added missing SQL queries for permission system.
* Removed link to Entry/exit pages report in eZ stats.
* Fixed security bug with variable check in messagebody in eZ forum.
* Fixed security bug with variable check in search in eZ filemanager.
* improved class eZHit in eZ link.
* Fixed bug with eZAd view count in frame.php and frontpage.
* Added optimalisation on classes in eZ imagecatalogue.
* Fixed bug for non virtualhost in articletool.php
* Done optimalisation to eZ stats.
* Fixed bug with read permissions on products in eZ trade.
* Fixed bug with customtag in table.
* Fixed bug with invalid content type header sendt with RSS article list.
* Fixed bug with Article title not beeing escaped when added as link item to a product (productedit).
* Fixed bug with pending mail en eZ article.
* Added more Content-Types for files, when sending mail with eZ mail.

Changes from 2.2.7 to 2.2.8
---------------------------
* Fixed rendering of nexted tables.
* Fixed problem with search in forum admin interface.
* Added menufilelist for listing files from a folder in the filemanager in the frame.php
* Fixed bug when adding/editing ads in "Section edit" if no productcategories 
  exist in eZ trade.
* Fixed cache bug in eZTrade (productlist)
* Made keywords available in articleview.tpl and as a variable which can be used in frame.php